04. final solution/objects/Questionnaire_Returned__c.object
<CustomObject>
    <fields>
        <fullName>Answered_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Answered By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Questionnaires_Returned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Questionnaires Returned</relationshipLabel>
        <relationshipName>Questionnaires_Returned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Questionnaire__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Questionnaire</label>
        <referenceTo>Questionnaire__c</referenceTo>
        <relationshipLabel>Questionnaires Returned</relationshipLabel>
        <relationshipName>Questionnaires_Returned</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terms_and_Conditions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Terms and Conditions</label>
        <type>Checkbox</type>
    </fields>
    <label>Questionnaire Returned</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Questionnaire__c</columns>
        <columns>Submitted__c</columns>
        <columns>Terms_and_Conditions__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RET-{0000}</displayFormat>
        <label>Questionnaire Returned Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaires Returned</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>